# telegram-translator-bot

./: .gitignore  Dockerfile  FLY_DEPLOY.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  RENDER_DEPLOY.md  RENDER_RESTART.md  docker-compose.yml  env.example  fly.toml  pyproject.toml  render.env  render.yaml  requirements.txt  reset_and_start.py  start.py
.github/workflows/: ci.yml
app/: __init__.py  bot.py  main.py
app/core/: config.py  database.py  i18n.py  logger.py  rate_limit.py  storage.py  translate.py  utils.py
app/handlers/: __init__.py  channel.py  comments.py  group_events.py  menu.py  new_commands.py  private.py
app/middlewares/: __init__.py  auth.py  throttling.py
app/models/: __init__.py  channel_settings.py  user_settings.py
